--- a/Sources/Tools/Giny.WorldView/Components/Home.razor
+++ b/Sources/Tools/Giny.WorldView/Components/Home.razor
@@ -15,6 +15,8 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
+
+
 <MudLayout>
 
 
@@ -40,19 +42,39 @@
         </MudToolBar>
         <MudDrawer @bind-Open="@DrawerOpen" Elevation="1">
             <MudDrawerHeader>
-                <MudText Typo="Typo.h6">Giny</MudText>
+                <MudText Typo="Typo.h3">Giny</MudText>
+            
             </MudDrawerHeader>
             <MudNavMenu>
-                <MudNavLink OnClick="() => Navigate(PageEnum.SpellExplorer)" Icon="@Icons.Filled.InvertColors" Match="NavLinkMatch.All">Spell Explorer</MudNavLink>
-                <MudNavLink OnClick="() => Navigate(PageEnum.Dungeons)" Icon="@Icons.Custom.Uncategorized.Radioactive" Match="NavLinkMatch.All">Dungeons</MudNavLink>
-                <MudNavLink OnClick="() => Navigate(PageEnum.Npcs)" Icon="@Icons.Custom.FileFormats.FileCode" Match="NavLinkMatch.All">Npcs</MudNavLink>
-                <MudNavLink OnClick="() => Navigate(PageEnum.Items)" Icon="@Icons.Custom.Uncategorized.ChessQueen" Match="NavLinkMatch.All">Items</MudNavLink>
+                <MudTreeView T="string">
+                    <MudTreeViewItem Icon="@Icons.Outlined.FilterDrama" Value="@("Serveur")">
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.SpellExplorer)" Match="NavLinkMatch.All">Sorts</MudNavLink>
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.Dungeons)" Match="NavLinkMatch.All">Donjons</MudNavLink>
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.Items)" Match="NavLinkMatch.All">Objets</MudNavLink>
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.Npcs)" Match="NavLinkMatch.All">PNJ's</MudNavLink>
+                    </MudTreeViewItem>
+                    <MudTreeViewItem Icon="@Icons.Outlined.Computer" Value="@("Client")">
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.D2O)" Match="NavLinkMatch.All">D2O</MudNavLink>
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.D2I)" Match="NavLinkMatch.All">D2I</MudNavLink>
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.D2P)" Match="NavLinkMatch.All">D2P</MudNavLink>
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.SWL)" Match="NavLinkMatch.All">SWL</MudNavLink>
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.MapEditor)" Match="NavLinkMatch.All">MapEditor</MudNavLink>
+                    </MudTreeViewItem>
+
+                    <MudTreeViewItem Icon="@Icons.Material.Outlined.Settings" Value="@("Parametres")">
+                        <MudNavLink Icon="@Icons.Outlined.ArrowRight" OnClick="() => Navigate(PageEnum.Configuration)" Match="NavLinkMatch.All">Données</MudNavLink>
+                    </MudTreeViewItem>
+
+                </MudTreeView>
+
+
             </MudNavMenu>
         </MudDrawer>
     </MudPaper>
 
-    <MudMainContent Class="pa-4 mr-16">
+    <MudMainContent Class="pa-4 mr-0">
         <CascadingValue Value="this">
+
             @if (AppState.Page == PageEnum.Loader)
             {
                 <Loader></Loader>
@@ -64,6 +86,14 @@
             else if (AppState.Page == PageEnum.Items)
             {
                 <Items></Items>
+            }
+            else if (AppState.Page == PageEnum.D2O)
+            {
+                <D2O></D2O>
+            }
+            else if (AppState.Page == PageEnum.Dungeons)
+            {
+                <Dungeons></Dungeons>
             }
             else if (AppState.Page == PageEnum.Configuration)
             {
@@ -87,10 +117,15 @@
     {
         get;
         set;
-    }
+    } = true;
 
     public void Navigate(PageEnum page)
     {
+        if (!AppState.Initialized)
+        {
+            DialogService.ShowMessageBox("Chargement en cours", "Veuillez attendre la fin du chargement de l'application.");
+            return;
+        }
         AppState.Page = page;
         StateHasChanged();
     }
