Add Database synchronizer. EleReader.cs fix

--- a/Sources/Tools/Giny.WorldView/Components/Loader.razor
+++ b/Sources/Tools/Giny.WorldView/Components/Loader.razor
@@ -183,6 +183,7 @@
                       DisplayError(ex.Message);
                       StateHasChanged();
                   });
+                       AppState.Initialized = true;
                        return;
                    }
                    OnStepReached();
