--- a/Sources/Tools/Giny.WorldView/Components/SpellExplorer.razor
+++ b/Sources/Tools/Giny.WorldView/Components/SpellExplorer.razor
@@ -486,16 +486,17 @@
     {
         switch (effect)
         {
-            case EffectsEnum.Effect_CastSpell_793:
-            case EffectsEnum.Effect_CastSpell_792:
-            case EffectsEnum.Effect_CastSpell_2794:
-            case EffectsEnum.Effect_CastSpell_2160:
+            case EffectsEnum.Effect_TargetExecuteSpellWithAnimation:
+            case EffectsEnum.Effect_TargetExecuteSpell:
+            case EffectsEnum.Effect_TargetExecuteSpellOnCell:
+            case EffectsEnum.Effect_CasterExecuteSpellGlobalLimitation:
             case EffectsEnum.Effect_CastSpell_1175:
-            case EffectsEnum.Effect_CastSpell_1160:
-            case EffectsEnum.Effect_CastSpell_1019:
-            case EffectsEnum.Effect_CastSpell_1018:
-            case EffectsEnum.Effect_CastSpell_1017:
-            case EffectsEnum.Effect_CastSpell_2792:
+            case EffectsEnum.Effect_CasterExecuteSpell:
+            case EffectsEnum.Effect_SourceExecuteSpellOnSource:
+            case EffectsEnum.Effect_SourceExecuteSpellOnTarget:
+            case EffectsEnum.Effect_TargetExecuteSpellOnSource:
+            case EffectsEnum.Effect_TargetExecuteSpellGlobalLimitation:
+            case EffectsEnum.Effect_TargetExecuteSpellOnSourceGlobalLimitation:
             case EffectsEnum.Effect_Trap:
                 return true;
         }
