--- a/Sources/Tools/Giny.WorldView/Components/Loader.razor
+++ b/Sources/Tools/Giny.WorldView/Components/Loader.razor
@@ -69,7 +69,7 @@
             }
             else if (step.Running)
             {
-                <MudTimelineItem Elevation="25" TimelineAlign="@align" Size="Size.Small" Color="Color.Secondary">
+                <MudTimelineItem Elevation="25" TimelineAlign="@align" Size="Size.Small" Color="Color.Info">
                     <MudText Style="white-space:nowrap" Typo="Typo.button">@step.Name</MudText>
                     <MudText Style="white-space:nowrap" Typo="Typo.body2" Class="mud-text-secondary">En cours...</MudText>
                 </MudTimelineItem>
