--- a/Sources/Tools/Giny.WorldView/Components/SpellExplorer.razor
+++ b/Sources/Tools/Giny.WorldView/Components/SpellExplorer.razor
@@ -283,7 +283,7 @@
                                                 <td>Interval de relance global</td>
                                                 <td>@(SelectedSpellLevel.GlobalCooldown)</td>
                                             </tr>
-                                           
+
                                             <tr>
                                                 <td>Etats requis</td>
                                                 <td>@GetRequiredStatesNames(SelectedSpellLevel)</td>
@@ -495,6 +495,7 @@
             case EffectsEnum.Effect_TargetExecuteSpellGlobalLimitation:
             case EffectsEnum.Effect_TargetExecuteSpellOnSourceGlobalLimitation:
             case EffectsEnum.Effect_Trap:
+            case EffectsEnum.Effect_CasterExecuteSpellOnCell:
                 return true;
         }
 
