Working on WorldEditor

--- a/Sources/Tools/Giny.WorldView/Components/Home.razor
+++ b/Sources/Tools/Giny.WorldView/Components/Home.razor
@@ -1,10 +1,12 @@
 ﻿@page "/home"
 
 
+@using Giny.WorldView.Components.Spells
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using MudBlazor
 @using Giny.World.Records.Spells;
+
 @inherits LayoutComponentBase
 @inject NavigationManager UriHelper
 @inject IDialogService DialogService
